--- a/examples/kitten.ipynb
+++ b/examples/kitten.ipynb
@@ -20,23 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# install Pint if necessary\n",
-    "\n",
-    "try:\n",
-    "    import pint\n",
-    "except ImportError:\n",
-    "    !pip install pint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -44,19 +28,22 @@
    "source": [
     "# download modsim.py if necessary\n",
     "\n",
-    "from os.path import exists\n",
+    "from os.path import basename, exists\n",
     "\n",
-    "filename = 'modsim.py'\n",
-    "if not exists(filename):\n",
-    "    from urllib.request import urlretrieve\n",
-    "    url = 'https://raw.githubusercontent.com/AllenDowney/ModSim/main/'\n",
-    "    local, _ = urlretrieve(url+filename, filename)\n",
-    "    print('Downloaded ' + local)"
+    "def download(url):\n",
+    "    filename = basename(url)\n",
+    "    if not exists(filename):\n",
+    "        from urllib.request import urlretrieve\n",
+    "        local, _ = urlretrieve(url, filename)\n",
+    "        print('Downloaded ' + local)\n",
+    "    \n",
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/' +\n",
+    "         'modsim.py')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -87,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def moment_of_inertia(r, system):\n",
+    "def moment_of_inertia(r):\n",
     "    \"\"\"Moment of inertia for a roll of toilet paper.\n",
     "    \n",
     "    r: current radius of roll in meters\n",
-    "    system: System object\n",
     "    \n",
     "    returns: moment of inertia in kg m**2\n",
     "    \"\"\"    \n",
@@ -189,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "moment_of_inertia(Rmax, system)"
+    "moment_of_inertia(Rmax)"
    ]
   },
   {
@@ -239,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "moment_of_inertia(Rmin, system)"
+    "moment_of_inertia(Rmin)"
    ]
   },
   {
@@ -276,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
