--- a/examples/glucose.ipynb
+++ b/examples/glucose.ipynb
@@ -26,22 +26,6 @@
    },
    "outputs": [],
    "source": [
-    "# install Pint if necessary\n",
-    "\n",
-    "try:\n",
-    "    import pint\n",
-    "except ImportError:\n",
-    "    !pip install pint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "# download modsim.py if necessary\n",
     "\n",
     "from os.path import basename, exists\n",
@@ -53,13 +37,12 @@
     "        local, _ = urlretrieve(url, filename)\n",
     "        print('Downloaded ' + local)\n",
     "    \n",
-    "download('https://raw.githubusercontent.com/AllenDowney/' +\n",
-    "         'ModSim/main/modsim.py')"
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -93,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "download('https://raw.githubusercontent.com/AllenDowney/' +\n",
-    "         'ModSim/main/data/glucose_insulin.csv')"
+    "download('https://github.com/AllenDowney/ModSim/raw/main/data/' +\n",
+    "         'glucose_insulin.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +98,16 @@
    "metadata": {},
    "source": [
     "We'll use `make_system` and `slope_func` as defined in Chapter 18."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/' +\n",
+    "         'chap18.py')"
    ]
   },
   {
@@ -601,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
