--- a/examples/bungee2.ipynb
+++ b/examples/bungee2.ipynb
@@ -44,14 +44,16 @@
    "source": [
     "# download modsim.py if necessary\n",
     "\n",
-    "from os.path import exists\n",
+    "from os.path import basename, exists\n",
     "\n",
-    "filename = 'modsim.py'\n",
-    "if not exists(filename):\n",
-    "    from urllib.request import urlretrieve\n",
-    "    url = 'https://raw.githubusercontent.com/AllenDowney/ModSim/main/'\n",
-    "    local, _ = urlretrieve(url+filename, filename)\n",
-    "    print('Downloaded ' + local)"
+    "def download(url):\n",
+    "    filename = basename(url)\n",
+    "    if not exists(filename):\n",
+    "        from urllib.request import urlretrieve\n",
+    "        local, _ = urlretrieve(url, filename)\n",
+    "        print('Downloaded ' + local)\n",
+    "    \n",
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +648,7 @@
     "    \n",
     "    system2 = system1.set(t_0=t_final, init=state_final)\n",
     "    results2, details2 = run_solve_ivp(system2, slope_func2)\n",
-    "    return results1.append(results2)"
+    "    return pd.concat([results1, results2])"
    ]
   },
   {
@@ -658,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +734,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -746,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
