--- a/examples/filter.ipynb
+++ b/examples/filter.ipynb
@@ -44,14 +44,16 @@
    "source": [
     "# download modsim.py if necessary\n",
     "\n",
-    "from os.path import exists\n",
+    "from os.path import basename, exists\n",
     "\n",
-    "filename = 'modsim.py'\n",
-    "if not exists(filename):\n",
-    "    from urllib.request import urlretrieve\n",
-    "    url = 'https://raw.githubusercontent.com/AllenDowney/ModSim/main/'\n",
-    "    local, _ = urlretrieve(url+filename, filename)\n",
-    "    print('Downloaded ' + local)"
+    "def download(url):\n",
+    "    filename = basename(url)\n",
+    "    if not exists(filename):\n",
+    "        from urllib.request import urlretrieve\n",
+    "        local, _ = urlretrieve(url, filename)\n",
+    "        print('Downloaded ' + local)\n",
+    "    \n",
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -71,9 +73,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following circuit diagram (from [Wikipedia](https://en.wikipedia.org/wiki/File:RC_Divider.svg)) shows a low-pass filter built with one resistor and one capacitor.  \n",
+    "The following circuit diagram (from [Wikipedia](https://commons.wikimedia.org/wiki/File:1st_Order_Lowpass_Filter_RC.svg)) shows a low-pass filter built with one resistor and one capacitor.  \n",
     "\n",
-    "![Circuit diagram of a low-pass filter](https://github.com/AllenDowney/ModSim/raw/main/figs/RC_Divider.svg)\n",
+    "![Circuit diagram of a low-pass filter](https://github.com/AllenDowney/ModSim/raw/main/figs/Lowpass_Filter_RC.png)\n",
     "\n",
     "A \"filter\" is a circuit takes a signal, $V_{in}$, as input and produces a signal, $V_{out}$, as output.  In this context, a \"signal\" is a voltage that changes over time.\n",
     "\n",
@@ -907,7 +909,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -921,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
