--- a/examples/insulin.ipynb
+++ b/examples/insulin.ipynb
@@ -53,8 +53,7 @@
     "        local, _ = urlretrieve(url, filename)\n",
     "        print('Downloaded ' + local)\n",
     "    \n",
-    "download('https://raw.githubusercontent.com/AllenDowney/' +\n",
-    "         'ModSim/main/modsim.py')"
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -403,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
