--- a/examples/kitten.ipynb
+++ b/examples/kitten.ipynb
@@ -37,8 +37,7 @@
     "        local, _ = urlretrieve(url, filename)\n",
     "        print('Downloaded ' + local)\n",
     "    \n",
-    "download('https://github.com/AllenDowney/ModSimPy/raw/master/' +\n",
-    "         'modsim.py')"
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -483,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -497,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
