--- a/examples/spiderman.ipynb
+++ b/examples/spiderman.ipynb
@@ -44,14 +44,16 @@
    "source": [
     "# download modsim.py if necessary\n",
     "\n",
-    "from os.path import exists\n",
+    "from os.path import basename, exists\n",
     "\n",
-    "filename = 'modsim.py'\n",
-    "if not exists(filename):\n",
-    "    from urllib.request import urlretrieve\n",
-    "    url = 'https://raw.githubusercontent.com/AllenDowney/ModSim/main/'\n",
-    "    local, _ = urlretrieve(url+filename, filename)\n",
-    "    print('Downloaded ' + local)"
+    "def download(url):\n",
+    "    filename = basename(url)\n",
+    "    if not exists(filename):\n",
+    "        from urllib.request import urlretrieve\n",
+    "        local, _ = urlretrieve(url, filename)\n",
+    "        print('Downloaded ' + local)\n",
+    "    \n",
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -643,7 +645,7 @@
     "    results2, details2 = run_solve_ivp(system2, slope_func, \n",
     "                                       events=event_func)\n",
     "\n",
-    "    return results1.append(results2)"
+    "    return pd.concat([results1, results2])"
    ]
   },
   {
@@ -826,7 +828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -840,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
