--- a/examples/wall.ipynb
+++ b/examples/wall.ipynb
@@ -54,7 +54,7 @@
     "        print('Downloaded ' + local)\n",
     "    \n",
     "download('https://raw.githubusercontent.com/AllenDowney/' +\n",
-    "         'ModSimPy/main/modsim.py')"
+    "         'ModSimPy/master/modsim.py')"
    ]
   },
   {
@@ -607,7 +607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -621,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
