--- a/examples/yoyo.ipynb
+++ b/examples/yoyo.ipynb
@@ -44,14 +44,16 @@
    "source": [
     "# download modsim.py if necessary\n",
     "\n",
-    "from os.path import exists\n",
+    "from os.path import basename, exists\n",
     "\n",
-    "filename = 'modsim.py'\n",
-    "if not exists(filename):\n",
-    "    from urllib.request import urlretrieve\n",
-    "    url = 'https://raw.githubusercontent.com/AllenDowney/ModSim/main/'\n",
-    "    local, _ = urlretrieve(url+filename, filename)\n",
-    "    print('Downloaded ' + local)"
+    "def download(url):\n",
+    "    filename = basename(url)\n",
+    "    if not exists(filename):\n",
+    "        from urllib.request import urlretrieve\n",
+    "        local, _ = urlretrieve(url, filename)\n",
+    "        print('Downloaded ' + local)\n",
+    "    \n",
+    "download('https://github.com/AllenDowney/ModSimPy/raw/master/modsim.py')"
    ]
   },
   {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -599,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
