Updating trees.ipynb

--- a/examples/trees.ipynb
+++ b/examples/trees.ipynb
@@ -197,7 +197,7 @@
     "\n",
     "$$ m_{n+1} = m_n + \\alpha A$$\n",
     "\n",
-    "where $m_n$ is the mass of the at time step $n$, $A$ is the area exposed to sunlight, and $\\alpha$ is an unknown growth parameter.\n",
+    "where $m_n$ is the mass of the tree at time step $n$, $A$ is the area exposed to sunlight, and $\\alpha$ is an unknown growth parameter.\n",
     "\n",
     "To get from $m$ to $A$, I'll make the additional assumption that mass is proportional to height raised to an unknown power:\n",
     "\n",
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I'll wrap the code from the previous section is a function that takes the parameters as inputs and makes a `System` object."
+    "I'll wrap the code from the previous section in a function that takes the parameters as inputs and makes a `System` object."
    ]
   },
   {
@@ -519,7 +519,7 @@
     "\n",
     "data.plot(label='data')\n",
     "decorate(xlabel='Time (years)',\n",
-    "             ylabel='Height (feet)')"
+    "         ylabel='Height (feet)')"
    ]
   },
   {
@@ -899,7 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking the derivative of the last equation yields\n",
+    "Taking the derivative of (3) yields\n",
     "\n",
     "(4) $\\frac{dm}{dt} = D h^{D-1} \\frac{dh}{dt}$\n",
     "\n",
