Fix 'the the' occurrences

--- a/book/book.tex
+++ b/book/book.tex
@@ -366,7 +366,7 @@ I have tried to mitigate these problems by providing a library, called \py{modsi
 
 Some features in the ModSim library are like training wheels; at some point you will probably stop using them and start working with the underlying libraries directly.  Other features you might find useful the whole time you are working through the book, and later.
 
-I encourage you to read the the ModSim library code.  Most of it is not complicated, and I tried to make it readable.  Particularly if you have some programming experience, you might learn something by reverse engineering my design decisions.
+I encourage you to read the ModSim library code.  Most of it is not complicated, and I tried to make it readable.  Particularly if you have some programming experience, you might learn something by reverse engineering my design decisions.
 
 
 \section{How much math and science do I need?} 
@@ -5099,7 +5099,7 @@ must be sluggish --- that is, that insulin acts slowly because
 insulin must first move from plasma to a remote compartment [...] to exert its action on glucose disposal.
 \end{quote}
 
-To paraphrase the second point, the effect of insulin on glucose disposal, as seen in the data, happens more slowly than we would expect if it depended primarily on the the concentration of insulin in the blood.  Bergman's group hypothesized that insulin must move relatively slowly from the blood to a ``remote compartment" where it has its effect.
+To paraphrase the second point, the effect of insulin on glucose disposal, as seen in the data, happens more slowly than we would expect if it depended primarily on the concentration of insulin in the blood.  Bergman's group hypothesized that insulin must move relatively slowly from the blood to a ``remote compartment" where it has its effect.
 
 \index{compartment model}
 
