--- a/examples/yoyo.ipynb
+++ b/examples/yoyo.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "The state variables we'll use are angle, `theta`, angular velocity, `omega`, the length of the spooled string, `y`, and the linear velocity of the yo-yo, `v`.\n",
     "\n",
-    "Here is a `State` object with the the initial conditions."
+    "Here is a `State` object with the initial conditions."
    ]
   },
   {
