Fix the/then typo
Update sentence to start "Then plot your prediction" instead of "The plot your prediction".

--- a/examples/salmon.ipynb
+++ b/examples/salmon.ipynb
@@ -336,7 +336,7 @@
    "source": [
     "Use `run_simulation` to run generate a prediction for the next 10 years.\n",
     "\n",
-    "The plot your prediction along with the original data.  Your prediction should pick up where the data leave off."
+    "Then plot your prediction along with the original data.  Your prediction should pick up where the data leave off."
    ]
   },
   {
