--- a/examples/salmon.ipynb
+++ b/examples/salmon.ipynb
@@ -336,7 +336,7 @@
    "source": [
     "Use `run_simulation` to run generate a prediction for the next 10 years.\n",
     "\n",
-    "The plot your prediction along with the original data.  Your prediction should pick up where the data leave off."
+    "Then plot your prediction along with the original data.  Your prediction should pick up where the data leave off."
    ]
   },
   {
@@ -409,7 +409,7 @@
    "source": [
     "## Distribution of net changes\n",
     "\n",
-    "To describe the distribution of net changes, write a function called `run_many_simulations` that runs many simulations, saves the final populations in a `ModSimSeries`, and returns the `ModSimSeries`.\n"
+    "To describe the distribution of net changes, write a function called `run_many_simulations` that runs many simulations, saves the final populations in a `SweepSeries`, and returns the `SweepSeries`."
    ]
   },
   {
@@ -689,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
