--- a/examples/trees.ipynb
+++ b/examples/trees.ipynb
@@ -899,7 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking the derivative of (3) yields\n",
+    "Taking the derivative of the previous equation (3) yields\n",
     "\n",
     "(4) $\\frac{dm}{dt} = D h^{D-1} \\frac{dh}{dt}$\n",
     "\n",
