--- a/notebooks/chap12.ipynb
+++ b/notebooks/chap12.ipynb
@@ -243,8 +243,12 @@
     "    system: System object\n",
     "    fraction: number from 0 to 1\n",
     "    \"\"\"\n",
-    "    system.init.S -= fraction\n",
-    "    system.init.R += fraction"
+    "    # Multiply 'fraction' by the proportion of susceptible\n",
+    "    # individual to be sure to subtract and add a value that \n",
+    "    # does not exceeds the proportion of susceptible \n",
+    "    # individials\n",
+    "    system.init.S -= fraction*system.init.S\n",
+    "    system.init.R += fraction*system.init.S"
    ]
   },
   {
