fix: the annual growth data is compared with the data after growth in the next year.

--- a/examples/salmon.ipynb
+++ b/examples/salmon.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abs_diffs = pop_series.diff()\n",
+    "abs_diffs = pop_series.diff().shift(-1)\n",
     "abs_diffs"
    ]
   },
