--- a/examples/glucose.ipynb
+++ b/examples/glucose.ipynb
@@ -337,7 +337,7 @@
     "Each time `error_func` is called, it prints the parameters, so we can get a sense of how `leastsq` works.\n",
     "\n",
     "`leastsq` has two return values.\n",
-    "The is an array with the best parameters:"
+    "The first is an array with the best parameters:"
    ]
   },
   {
@@ -608,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
