--- a/examples/wall.ipynb
+++ b/examples/wall.ipynb
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "def compute_flux(t, state, system):\n",
-    "    \"\"\"Compute the fluxes between the walls surfaces and the internal masses.\n",
+    "    \"\"\"Compute the fluxes between the wall's surfaces and the internal masses.\n",
     "    \n",
     "    state: State with T_C1 and T_C2\n",
     "    t: time in seconds\n",
@@ -621,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
