--- a/examples/bungee2.ipynb
+++ b/examples/bungee2.ipynb
@@ -429,7 +429,7 @@
    "source": [
     "## Phase 2\n",
     "\n",
-    "Once the jumper has falled more than the length of the cord, acceleration due to energy transfer from the cord stops abruptly.  As the cord stretches, it starts to exert a spring force.  So let's simulate this second phase."
+    "Once the jumper has fallen more than the length of the cord, acceleration due to energy transfer from the cord stops abruptly.  As the cord stretches, it starts to exert a spring force.  So let's simulate this second phase."
    ]
   },
   {
@@ -748,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
