--- a/examples/filter.ipynb
+++ b/examples/filter.ipynb
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ModSimPy",
    "language": "python",
    "name": "python3"
   },
@@ -923,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
